app/assets/stylesheets/home.css.scss
@import "twitter/bootstrap/mixins.scss";

// Variables
$top-bar-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
$humanaColor: #0088CC;
$linkColor: $humanaColor;
$linkColorHover: #f89406;
$humanaColorComplementary: #f89406;

// Mixins
@mixin background-size($size) {
  -moz-background-size: $size;
  -webkit-background-size: $size;
  -o-background-size: $size;
  -ms-background-size: $size;
  background-size: $size;
}

@mixin box-shadow($box-shadow-definition) {
  -moz-box-shadow: $box-shadow-definition;
  -webkit-box-shadow: $box-shadow-definition;
  -o-box-shadow: $box-shadow-definition;
  -ms-box-shadow: $box-shadow-definition;
  box-shadow: $box-shadow-definition;
}

@mixin transform($transformation) {
  -ms-transform: $transformation;
  -moz-transform: $transformation;
  -webkit-transform: $transformation;
  -o-transform: $transformation;
  transform: $transformation;
}

@mixin transition($transition) {
  -webkit-transition: $transition;
  -moz-transition: $transition;
  -o-transition: $transition;
  -ms-transition: $transition;
  transition: $transition;
}

@mixin rounded-box($values) {
  -moz-border-radius: $values;
  -webkit-border-radius: $values;
  -o-border-radius: $values;
  -ms-border-radius: $values;
  border-radius: $values;
}

@mixin opacity($opacity) {
  -moz-opacity: $opacity;
  -webkit-opacity: $opacity;
  -o-opacity: $opacity;
  -ms-opacity: $opacity;
  opacity: $opacity;
}

// Tipography
h1, h2, h3, h4, h5, h6, nav, .btn, cite {
  font-family: BreeSerifRegular, 'Bree Serif', 'Rockwell', serif;
  letter-spacing: -0.02em;
  text-rendering: optimizeLegibility;
  text-decoration: none;
}

nav {
  font-size: 110%;
}

a, a:visited {
  color: $linkColor;
  @include transition(color 0.2s);
}

a:hover {
  text-decoration: none;
}

header {
  color: $humanaColor;
  @include box-shadow($top-bar-shadow);

  .logo {
    background-color: white;
    @include box-shadow($top-bar-shadow);
    @include transition(all 0.2s ease);

    &:hover {
      @include transform(rotate(-5deg));
    }
  }
}

// Positioning
header {
  position: fixed;
  top: 0;
  background-color: white;
  min-width: 870px;
  width: 100%;
  z-index: 1000;
  h1 {
    height: 48px;
    padding-left: 132px;
    float: left;
  }

  .logo {
    top: 0;
    position: absolute;
    left: 16px;
    padding: 0 4px;
  }

  nav {
    margin: 32px 16px 0 0;
    li {
      float: left;
      margin-left: 10px;
    }
  }
}

.barocco {
  font-family: 'Satisfy', cursive !important;
  @include transform(rotate(5deg));
  color: $linkColorHover;
  text-shadow: 0 -1px 0 darken($linkColorHover, 15%);
  text-align: left !important;
  z-index: 101;
  position: absolute;
}

#emotional {
  height: 500px;
  background-image: image-url('carousel/image3.jpg');
  background-repeat: no-repeat;
  background-position: center 50px;
  @include background-size(cover);
  p {
    color: #333;
  }
}

#action {
  text-align: center;
  background-color: white;
  height: 150px;
  width: 100%;
  margin: 20px 0;

  h3 {
    color: darken($humanaColor, 15%);
  }
  p {
    color: #777;
  }
}

#mission {
  clear: both;
  color: white;

  padding: 0 20%;
  background-color: darken($humanaColor, 15%);
  @include box-shadow(inset 0 0 200px 10px darken($humanaColor, 30%));

  div {
    padding: 20px 0;
    line-height: 1.2em;
    width: 600px;
  }
  cite {
    padding-top: 50px;
    display: block;
    line-height: 1.4em;
    text-shadow: 0 1px 0 darken($humanaColor, 15%);
    font-style: italic;
    font-size: 160%;
  }
}

#projects {
  @include background-size(cover);
  background-image: image-url('genitorialita.jpg');
  background-repeat: no-repeat;
  background-position: center 0;
  min-width: 520px;
  h3.parenthood {
    text-align: center;
    text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    a {
      color: white;
      span {
        white-space: nowrap;
      }
    }
    white-space: wrap;
  }
  background-color: white;
  padding: 0 20%;
  height: 443px;
  #borning {
    width: 30%;
    min-width: 156px;
    float: left;
    margin-top: 328px;
    padding: 0 30px;
    background: rgba(0, 0, 0, 0.3);
    color: #ddd;
    @include rounded-box(3px);
    @include box-shadow(0 0 10px 0 #444);

  }
  #crisis {
    width: 30%;
    min-width: 156px;
    float: right;
    margin-top: 328px;
    padding: 0 30px;
    background: rgba(0, 0, 0, 0.3);
    color: #ddd;
    @include rounded-box(3px);
    @include box-shadow(0 0 10px 0 #444);

  }
}

#team {
  padding: 0 20%;
  @include background-size(cover);
  background-image: image-url('carousel/image2.jpg');
  background-repeat: no-repeat;
  background-position: center 0;
  padding-bottom: 70px;
  padding: 0 auto;
  clear: both;

  .my-container {
    display: inline-table;
  }

  .member {
    float: left;
    color: white;
    width: 230px;
    margin: 10px;

    h4 {
      a, a:visited {
        color: white;
        @include transition(color 0.2s);
      }

      a:hover {
        color: $linkColorHover;
        text-decoration: none;
      }
    }
    padding: 10px;
    background: rgba(0, 0, 0, 0.7);
    color: #ddd;
    @include rounded-box(3px);
    @include box-shadow(0 0 10px 0 #002b46);

    h6 {
      text-transform: capitalize;
      color: $humanaColor;
      text-shadow: 0 -1px 0 rgba(0, 155, 217, 0.38);
    }
    p {
      color: #ddd;
      line-height: normal;
    }
  }
}

#contacts {
  color: white;
  padding: 0 20%;
  background-color: darken($humanaColor, 15%);
  @include box-shadow(inset 0 0 200px 10px darken($humanaColor, 30%));
  p {
    padding: 10px 0 50px 0;
  }
}

@font-face {
  font-family: 'BreeSerifRegular';
  src: url('/fonts/BreeSerif-Regular-webfont.eot');
  src: url('/fonts/BreeSerif-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('/fonts/BreeSerif-Regular-webfont.woff') format('woff'), url('/fonts/BreeSerif-Regular-webfont.ttf') format('truetype'), url('/fonts/BreeSerif-Regular-webfont.svg#BreeSerifRegular') format('svg');
  font-weight: normal;
  font-style: normal;
}

